Saas create context (#487)
* Allow SaasAdminService client to pass context members and their roles when creating a context. Added context role to response of getContexts and getNodes.
Updated initContext to accept nodes with different roles.

* Enabled creating context with nodes in different roles through REST interface.

* Leader for a context is not cleared when no leader reported by any of the nodes.